feat: Update keywords in index.html and package.json for improved SEO and discoverability

--- a/package.json
+++ b/package.json
@@ -3,6 +3,33 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "keywords": [
+    "router-kit",
+    "router kit",
+    "routerkit",
+    "npm",
+    "react",
+    "react-router",
+    "routing",
+    "router",
+    "navigation",
+    "spa",
+    "single-page-application",
+    "typescript",
+    "react-navigation",
+    "client-side-routing",
+    "history-api",
+    "route-matching",
+    "dynamic-routing",
+    "nested-routes",
+    "route-parameters",
+    "query-params",
+    "hash-routing",
+    "browser-router",
+    "react-components",
+    "lightweight-router",
+    "minimal-router"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
