feat: Add declarative routing support and enhance code formatting
- Introduced declarative routing using Router and Route components in the Docs page.
- Added new section for Declarative Routing in the documentation.
- Enhanced CodeBlock component to support code formatting with js-beautify and Prettier.
- Updated package.json to include js-beautify and prettier dependencies.
- Added examples for basic usage, dynamic routes, nested routes, and comparison with programmatic routing.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
+    "@types/js-beautify": "^1.14.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "js-beautify": "^1.15.4",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
