--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "build": "npm run generate-sitemap && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap.js"
+    "generate-sitemap": "node scripts/generate-sitemap.js",
+    "update-version": "node scripts/update-version.js",
+    "validate-version": "node scripts/validate-version.js"
   },
   "dependencies": {
     "@types/js-beautify": "^1.14.3",
@@ -46,7 +48,7 @@
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
     "react-syntax-highlighter": "^16.1.0",
-    "router-kit": "^1.3.1"
+    "router-kit": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
